modify some files

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <label class="password-label" for="password">Password cannot be empty</label>
           </div>
-          <input type="button" id="button" value="Claim your trial">
+          <button type="button" id="button">Claim your trial</button>
         </form>
         <h3>By clicking the button, you are agreeing to our <span class="terms">Terms and Services</span></h3>
       </div>
